--- a/nav.html
+++ b/nav.html
@@ -24,40 +24,108 @@
         </nav>
       </section>
       <header><span style="color: rgb(0, 179, 255); width: 500px; height: 300px;" >G</span><span style="color: rgba(100, 3, 3, 0.853); width: 500px; height: 300px;">o</span><span style="color: rgb(246, 246, 103); width: 500px; height: 300px;">o</span><span style="color: rgb(0, 179, 255); width: 500px; height: 300px;">g</span><span style="color: rgb(6, 220, 6); width: 500px; height: 300px;">l</span><span style="color: rgba(100, 3, 3, 0.853); width: 500px; height: 300px;">e</span></header>
-      <section> 
-        <table>
-          <tr>
-            <th>ID</th>
-            <th>Name</th>
-            <th>Age</th>
-            <th>Email</th>
-          </tr>
-          <tr>
-            <td>1</td>
-            <td>some 1</td>
-            <td>22</td>
-            <td>some@gmail.com</td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>some 1</td>
-            <td>22</td>
-            <td>some@gmail.com</td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td>some 1</td>
-            <td>22</td>
-            <td>some@gmail.com</td>
-          </tr>
-          <tr>
-            <td>4</td>
-            <td>some 1</td>
-            <td>22</td>
-            <td>some@gmail.com</td>
-          </tr>
-        </table>
-      </section>
+<section class="cards-section">
+  <div>
+    <h1>image-1</h1>
+    <img src="../../Pictures//Screenshots/image.png" alt="some image">
+    <button>Read More</button>
+  </div>
+  <div>
+    <h1>image-1</h1>
+    <img src="../../Pictures//Screenshots/image.png" alt="some image">
+    <button>Read More</button>
+  </div>
+  <div>
+    <h1>image-1</h1>
+    <img src="../../Pictures//Screenshots/image.png" alt="some image">
+    <button>Read More</button>
+  </div>
+</section>
+<section class="cards-section">
+  <div>
+    <h1>image-1</h1>
+    <img src="../../Pictures//Screenshots/image.png" alt="some image">
+    <button>Read More</button>
+  </div>
+  <div>
+    <h1>image-1</h1>
+    <img src="../../Pictures//Screenshots/image.png" alt="some image">
+    <button>Read More</button>
+  </div>
+  <div>
+    <h1>image-1</h1>
+    <img src="../../Pictures//Screenshots/image.png" alt="some image">
+    <button>Read More</button>
+  </div>
+</section>
+<section class="cards-section">
+  <div>
+    <h1>image-1</h1>
+    <img src="../../Pictures//Screenshots/image.png" alt="some image">
+    <button>Read More</button>
+  </div>
+  <div>
+    <h1>image-1</h1>
+    <img src="../../Pictures//Screenshots/image.png" alt="some image">
+    <button>Read More</button>
+  </div>
+  <div>
+    <h1>image-1</h1>
+    <img src="../../Pictures//Screenshots/image.png" alt="some image">
+    <button>Read More</button>
+  </div>
+</section>
+<section class="cards-section">
+  <div>
+    <h1>image-1</h1>
+    <img src="../../Pictures//Screenshots/image.png" alt="some image">
+    <button>Read More</button>
+  </div>
+  <div>
+    <h1>image-1</h1>
+    <img src="../../Pictures//Screenshots/image.png" alt="some image">
+    <button>Read More</button>
+  </div>
+  <div>
+    <h1>image-1</h1>
+    <img src="../../Pictures//Screenshots/image.png" alt="some image">
+    <button>Read More</button>
+  </div>
+</section>
+<section class="cards-section">
+  <div>
+    <h1>image-1</h1>
+    <img src="../../Pictures//Screenshots/image.png" alt="some image">
+    <button>Read More</button>
+  </div>
+  <div>
+    <h1>image-1</h1>
+    <img src="../../Pictures//Screenshots/image.png" alt="some image">
+    <button>Read More</button>
+  </div>
+  <div>
+    <h1>image-1</h1>
+    <img src="../../Pictures//Screenshots/image.png" alt="some image">
+    <button>Read More</button>
+  </div>
+</section>
+<section class="cards-section">
+  <div>
+    <h1>image-1</h1>
+    <img src="../../Pictures//Screenshots/image.png" alt="some image">
+    <button>Read More</button>
+  </div>
+  <div>
+    <h1>image-1</h1>
+    <img src="../../Pictures//Screenshots/image.png" alt="some image">
+    <button>Read More</button>
+  </div>
+  <div>
+    <h1>image-1</h1>
+    <img src="../../Pictures//Screenshots/image.png" alt="some image">
+    <button>Read More</button>
+  </div>
+</section>
     </main>
   </body>
 </html>
