sub list in html

--- a/today.html
+++ b/today.html
@@ -22,6 +22,25 @@ tr, td, th{
     </style>
   </head>
   <body>
+<!-- sub lists -->
+    <section>
+<ul>
+    <li>name</li>
+    <li>age</li>
+    <li>address</li>
+    <ul>
+        <li>Door number</li>
+        <li>village</li>
+        <li>city</li>
+        <li>district</li>
+        <ul>
+            <li>pincode</li>
+            <li>postal code</li>
+        </ul>
+
+    </ul>
+</ul>
+    </section>
     <!-- table latest tags -->
 <section>
     <table>
